# rules_nushell

./: .bazeliskrc  .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel
bzlmod/: BUILD.bazel  gen.nu_repo.BUILD.bazel  nu.bzl  nu_repo.bzl
nu/: BUILD.bazel  def.bzl  gen.nu_binary.default.sh  gen.nu_binary.windows.bat
tests/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE  WORKSPACE.bazel  module.nu  test.nu
toolchain/: BUILD.bazel  gen.runner.args.default.sh  gen.runner.args.windows.bat  gen.runner.default.sh  gen.runner.windows.bat  toolchain.bzl
