# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""rules_nushell module."""

module(
  name = "rules_nushell",
  version = "0.0.1",
  toolchains_to_register = [
    "//toolchain:all",
  ],
)

bazel_dep(
  name = "bazel_skylib",
  version = "1.2.1",
)

nu = use_extension("//bzlmod:nu.bzl", "nu")
use_repo(nu, "nushell")
