# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""Exports the binary file for nushell."""

load("@bazel_skylib//rules:native_binary.bzl", "native_binary")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility=["//visibility:public"])

native_binary(
  name = "nu_binary",
  src = "{relative}/{binary}",
  out = "native_{binary}",
  visibility = [
    "//visibility:public",
  ],
)
