# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""Package to provide the toolchain for nushell."""

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(":toolchain.bzl", "define_platform_and_toolchain")

bzl_library(
  name = "bzl",
  srcs = [
    "toolchain.bzl",
  ],
  visibility = [
    "//visibility:public",
  ],
)

toolchain_type(name = "toolchain_type")

define_platform_and_toolchain(
  os = "windows",
  cpu = "x86_64",
  extension = "bat",
  sep = '\\',
  env_pattern = '%%%s%%',
  template = '//toolchain:gen.runner.windows.bat',
  template_args = '//toolchain:gen.runner.args.windows.bat',
)

define_platform_and_toolchain(
  os = "linux",
  cpu = "x86_64",
)

define_platform_and_toolchain(
  os = "linux",
  cpu = "arm64",
)

define_platform_and_toolchain(
  os = "macos",
  cpu = "x86_64",
)

define_platform_and_toolchain(
  os = "macos",
  cpu = "arm64",
)
